# transformers

./: .style.yapf  Makefile  pyproject.toml  pyrightconfig.json  setup.py
examples/: iambot_run_lm.sh  run_iambot_language_modeling.py  run_squad.py  train_sp.py
examples/iambot/: dataset_tester.py  iambot_lm.sh  merge_opensubs.py  train_lm.py
examples/text-generation/: run_generation.py
src/transformers/: __init__.py  modeling_bert.py  modeling_custom_gpt2.py  tokenization_auto.py  tokenization_gpt2.py  trainer.py  training_args.py
src/transformers/customs/: __init__.py  bi_tempered_loss.py  dac_loss.py  label_smoothing_loss.py  misspelled_tokens_masking.py  modeling_bert.py  modeling_custom_gpt2.py  modeling_roberta.py  new_misspelled_tokens_masking.py  tokenization_sentencepiece.py
src/transformers/customs/common/: __init__.py  utils.py
src/transformers/data/: data_collator.py
transformers/: tokenization_utils.py
transformers/customs/: modeling_bert.py  modeling_roberta.py
