[tool.poetry]
name = 'transformers'
version = '2.9.0'
description = 'State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch'
license = 'Apache'
keywords = [
    'NLP',
    'deep',
    'learning',
    'transformer',
    'pytorch',
    'tensorflow',
    'BERT',
    'GPT',
    'GPT-2',
    'google',
    'openai',
    'CMU',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
homepage = 'https://github.com/iambotHQ/transformers'
authors = ['Thomas Wolf, Lysandre Debut, Victor Sanh, Julien Chaumond, Sam Shleifer, Google AI Language Team Authors, Open AI team Authors, Facebook AI Authors, Carnegie Mellon University Authors <thomas@huggingface.co>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '>=3.7'
torch = '^1.4.0'
tqdm = '^4.46'
requests = '^2.23.0'
sentencepiece = '^0.1.86'
sacremoses = '^0.0.43'
filelock = '^3.0.12'
misspell = '^0.6'
numpy = '^1.18.4'
tokenizers = '^0.7.0'
regex = '!=2019.12.17'
allennlp = '^0.9.0'
logzero = '^1.5.0'
fire = "^0.3.1"

[tool.poetry.dependencies.lm]
git = 'https://github.com/iambotHQ/transformer-lm'
rev = 'acd4cbf'

# [tool.poetry.dependencies.torch-scatter]
# url = 'https://pytorch-geometric.com/whl/torch-1.5.0/torch_scatter-latest%2Bcu102-cp37-cp37-linux_x86_64.whl'

[tool.poetry.dev-dependencies]
pylint = '^2.4.4'
mypy = '^0.770'
black = "^19.10b0"
rope = "^0.17.0"
ipdb = "^0.13.2"
isort = "^4.3.21"
flake8 = "^3.8.3"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = 'transformers'
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.flake8]
ignore = [
    'E203',
    'E501',
    'W503',
]
max-line-length = 119

[tool.mypy]
python_version = 3.7
show_column_numbers = true
follow_imports = 'normal'
ignore_missing_imports = true
disallow_untyped_calls = false
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_incremental = false

[tool.black]
line-length = 119
target-version = ['py37']
include = '\.pyi?$'

[build-system]
requires = ['poetry>=1.0.3']
build-backend = 'poetry.masonry.api'
